tests/files/type_checker_tests/should_pass/185.cmdr
//Test that multiply set operation type checks
x = 1.2;
x *= 2.3;
