tests/files/type_checker_tests/should_fail/042.cmdr
//Should fail when multiply setting incompatible types
x = 3;
x *= true;
